--- a/lab-python-error-handling.ipynb
+++ b/lab-python-error-handling.ipynb
@@ -72,11 +72,162 @@
     "\n",
     "4. Test your code by running the program and deliberately entering invalid quantities and product names. Make sure the error handling mechanism works as expected.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "84ed3360",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getPrices(products):\n",
+    "    prices = {}\n",
+    "    for product in products:\n",
+    "        valid_input = False\n",
+    "        while not valid_input:\n",
+    "            try:\n",
+    "                prices[product] = int(input(f\"Enter the price of {product}\"))\n",
+    "                if prices[product] < 0:\n",
+    "                    raise ValueError (\"Invalid price! Please enter a non-negative value.\")\n",
+    "                valid_input = True\n",
+    "            except ValueError as error:\n",
+    "                print(f\"Error: {error}\")\n",
+    "    return prices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4e3f39ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def totalPrice(prices, costumer_orders):\n",
+    "    return sum([prices[order] for order in costumer_orders if order in prices])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5dd2f233",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_inventory(products):\n",
+    "    inventory = {}\n",
+    "    for product in products:\n",
+    "        valid_input = False\n",
+    "        while not valid_input:\n",
+    "            try:\n",
+    "                quantity = int(input(f\"Enter the quantity of {product}s available: \"))\n",
+    "                if quantity >= 0:\n",
+    "                    inventory[product] = quantity\n",
+    "                    valid_input = True\n",
+    "                else:\n",
+    "                    print(\"Quantity cannot be negative. Please enter a valid quantity.\")\n",
+    "            except ValueError:\n",
+    "                print(\"Invalid input. Please enter a valid quantity.\")\n",
+    "    return inventory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "822bc047",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def updateInventory(costumer_orders, inventory):\n",
+    "    for item in costumer_orders:\n",
+    "        if item in inventory:\n",
+    "            inventory[item] -= 1\n",
+    "\n",
+    "    to_remove = [i for i in inventory if inventory[i] == 0]\n",
+    "\n",
+    "    inventory = {i: inventory[i] for i in inventory if i not in to_remove}\n",
+    "\n",
+    "    return inventory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b79b429c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_costumer_orders(inventory):\n",
+    "    valid_input = False\n",
+    "    while not valid_input:\n",
+    "        try:\n",
+    "            inp_str = int (input(\"Enter the number of customer orders: \"))\n",
+    "            if inp_str <= 0:\n",
+    "                raise ValueError (\"Invalid input! Please enter a value bigger than 0.\")\n",
+    "            valid_input = True\n",
+    "        except ValueError as error:\n",
+    "            print(f\"Error: {error}\")\n",
+    "\n",
+    "    customer_orders = set()\n",
+    "    for i in range(inp_str):\n",
+    "        valid_input = False\n",
+    "        while not valid_input:\n",
+    "            try:\n",
+    "                prod = (input(\"Enter the name of a product that a customer wants to order: \"))\n",
+    "                if (prod not in inventory):\n",
+    "                    raise ValueError (\"We dont have this product\")\n",
+    "                elif (prod in customer_orders):\n",
+    "                    raise ValueError (\"You already ordered this product\")\n",
+    "                valid_input = True\n",
+    "            except ValueError as e:\n",
+    "                print(f\"Error: {e}\")\n",
+    "        customer_orders.add(prod)\n",
+    "\n",
+    "    return customer_orders\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "866813ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def main():\n",
+    "    products = {\n",
+    "        \"t-shirt\",\n",
+    "        \"mug\",\n",
+    "        \"hat\",\n",
+    "        \"book\",\n",
+    "        \"keychain\"\n",
+    "    }\n",
+    "    \n",
+    "    inventory = initialize_inventory(products)\n",
+    "    \n",
+    "    customer_orders = get_costumer_orders(inventory)\n",
+    "\n",
+    "    print(\"Order statistics:\")\n",
+    "    print(f\"Total Products Ordered: {len(customer_orders)}\")\n",
+    "    #percentage\n",
+    "    order_status = len(customer_orders) / len(products) * 100\n",
+    "    print(f\"Percentage of Unique Products Ordered: {order_status}%\\n\")\n",
+    "    \n",
+    "    inventory = updateInventory(customer_orders, inventory)\n",
+    "    print(\"Updated inventory\")\n",
+    "    for i in inventory:\n",
+    "        print(f\"{i} : {inventory[i]}\")\n",
+    "    prices = getPrices(customer_orders)\n",
+    "    print (f\"Total Price: {totalPrice(prices, customer_orders)}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -90,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
